# kaptive-utils

./: CONTRIBUTING.md  README.md  pyproject.toml  tox.ini  zensical.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docs/: index.md
src/kaptive_utils/: _version.py
src/kaptive_utils/core/: alignment.py  constants.py  database.py  genome.py  graph.py  interval.py
src/kaptive_utils/io/: __init__.py  _base.py  _fasta.py  _gfa.py
src/kaptive_utils/plot/: _core.py  cli.py
src/kaptive_utils/plus/: plus.py
tests/: test_foo.py
