[project]
name = "kaptive-utils"
description = "Utilities for Kaptive, the tool for in silico serotyping"
authors = [{ name = "Tom Stanton", email = "tomdstanton@gmail.com" }]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["kaptive>=3.2.1", "numpy", "numba", "pyfgs>=0.0.1", "gb-io"]

[project.optional-dependencies]
find = ["pyopal", "scipy", "scikit-learn", "scikit-network", "peptides"]
plot = ["matplotlib", "plotly"]
plus = ["pyhmmer>=0.12.0"]

[project.urls]
Homepage = "https://tomdstanton.github.io/kaptive-utils/"
Repository = "https://github.com/tomdstanton/kaptive-utils"
Documentation = "https://tomdstanton.github.io/kaptive-utils/"

[dependency-groups]
test = ["pytest>=9.0.2", "pytest-cov"]
docs = ["zensical", "mkdocstrings[python]>=1.0.2"]
dev = [
    "pre-commit>=4.5.1",
    "tox-uv>=1.33.1",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    { include-group = "test" },
    { include-group = "docs" }
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaptive_utils"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/kaptive_utils/_version.py"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
#addopts = "--doctest-modules"
#testpaths = ["tests", "src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
